--- a/Comparisons.html
+++ b/Comparisons.html
@@ -62,13 +62,13 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">Max Temp</div>
                 <a href="MaxTemp1.html">
-                  <img class="panel" src="Images/Lat_temp.png" alt="Max Temp Graph">
+                  <img class="panel" src="Images/Lat_temp1.png" alt="Max Temp Graph">
                 </a>
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">VS. Humidity</div>
                 <a href="Humidity.html">
-                  <img class="panel" src="Images/Lat_Hum.png" alt="Humidity Graph">
+                  <img class="panel" src="Images/Lat_Hum1.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -77,14 +77,14 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">Cloudiness</div>
                 <a href="Cloudiness.html">
-                  <img class="panel" src="Images/Lat_Cloud.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Images/Lat_Cloud1.png" alt="Cloudiness Graph">
                 </a>
 
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">VS. Wind Speed</div>
                 <a href="WindSpeed.html">
-                  <img class="panel" src="Images/Lat_Wind.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Images/Lat_Wind1.png" alt="Wind Speed Graph">
                 </a>
               </div>
             </div>
