--- a/WindSpeed.html
+++ b/WindSpeed.html
@@ -88,27 +88,27 @@
 
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
-              <div class="col-12">
+              <div class="col-6">
                 <a href="MaxTemp1.html">
-                  <img class="panel" src="Images/Northern_maxtemp_lat.png" alt="Max Temp Graph">
+                  <img class="panel" src="Images/Lat_Temp1.png" alt="Max Temp Graph">
                 </a>
               </div>
-              <div class="col-12">
+              <div class="col-6">
                 <a href="Humidity.html">
-                  <img class="panel" src="Images/Lat_Hum.png" alt="Humidity Graph">
+                  <img class="panel" src="Images/Lat_Hum1.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
 
             <div class="row" style="padding-bottom: 30px;">
-              <div class="col-12">
+              <div class="col-66">
                 <a href="Cloudiness.html">
-                  <img class="panel" src="Images/Lat_Cloud.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Images/Lat_Cloud1.png" alt="Cloudiness Graph">
                 </a>
               </div>
-              <div class="col-12">
+              <div class="col-6">
                 <a href="WindSpeed.html">
-                  <img class="panel" src="Images/Lat_Wind.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Images/Lat_Wind1.png" alt="Wind Speed Graph">
                 </a>
               </div>
 
